LxMarkdownTextArea: dropdown style fix inside LxRow; LxFilters: bottom gap fix (#1519)

--- a/src/styles/lx-forms-grid.css
+++ b/src/styles/lx-forms-grid.css
@@ -1256,14 +1256,9 @@ p .lx-person-display-wrapper {
   fill: var(--color-interactive-hover-foreground);
 }
 
-.lx-filter .lx-body:has(.lx-form-grid) {
-  padding: 0;
-}
-
 .lx .lx-filter .lx-form.lx-form-region:has(>.lx-form-grid) {
   padding: 0.5rem 1.5rem 2rem 1.5rem;
   gap: 0.5rem;
-  margin-bottom: 0;
 }
 
 .lx .lx-filter .lx-body .lx-form.lx-form-region:has( > .lx-form-grid) .lx-button-set{
